# booru-helper-mini

./: .gitignore  README.md  __init__.py  booru_tagger.py  pyproject.toml  requirements.txt
py/: __init__.py  autocomplete.py
web/js/: autocompleter.js
