[project]
name = "booru-helper-mini"
description = "ComfyUI custom node pack with tagger functionality combining WD14, Camie, and PixAI models. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["onnxruntime", "onnx", "huggingface_hub>=0.20.0", "timm>=0.9.0", "torch", "torchvision"]

[project.urls]
Repository = "https://github.com/adbrasi/booru-helper-mini"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/adbrasi/booru-helper-mini/wiki"
"Bug Tracker" = "https://github.com/adbrasi/booru-helper-mini/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "booru-helper-mini"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

